overflow fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,7 @@ html {
   font-weight: 500;
   font-style: normal;
   font-size: 16px;
+  overflow: hidden;
 }
 
 body {
